--- a/src/Catalogs/Файлы/Forms/Файлы/Form.form
+++ b/src/Catalogs/Файлы/Forms/Файлы/Form.form
@@ -4758,6 +4758,10 @@
     <event>BeforeLoadDataFromSettingsAtServer</event>
     <name>ПриЗагрузкеДанныхИзНастроекНаСервере</name>
   </handlers>
+  <handlers>
+    <event>OnLoadDataFromSettingsAtServer</event>
+    <name>ПриЗагрузкеДанныхИзНастроекНаСервере</name>
+  </handlers>
   <excludedCommands>Create</excludedCommands>
   <excludedCommands>Delete</excludedCommands>
   <excludedCommands>Refresh</excludedCommands>
